feat: binary relations